--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,7 +71,7 @@
 		"react-virtualized-auto-sizer": "^1.0.24",
 		"react-virtuoso": "^2.13.1",
 		"recharts": "^2.12.1",
-		"rrweb": "workspace:*",
+		"rrweb": "^2.0.0-alpha.17",
 		"rudder-sdk-js": "2.20.0",
 		"subscriptions-transport-ws": "^0.11.0",
 		"use-query-params": "^2.2.0",
@@ -120,7 +120,7 @@
 		"@graphql-codegen/typescript-react-apollo": "^2.2.1",
 		"@highlight-run/sourcemap-uploader": "workspace:*",
 		"@parcel/watcher": "^2.4.1",
-		"@rrweb/types": "workspace:*",
+		"@rrweb/types": "^2.0.0-alpha.17",
 		"@svgr/cli": "^8.1.0",
 		"@svgr/core": "^7.0.0",
 		"@svgr/plugin-jsx": "^7.0.0",
