--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -63,7 +63,7 @@
 		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-typescript": "^11.1.6",
-		"@rrweb/types": "workspace:*",
+		"@rrweb/types": "^2.0.0-alpha.17",
 		"@size-limit/file": "^8.1.0",
 		"@types/chrome": "^0.0.268",
 		"@types/js-cookie": "^3.0.6",
@@ -91,7 +91,7 @@
 		"@opentelemetry/resources": "^1.24.1",
 		"@opentelemetry/sdk-trace-web": "^1.24.1",
 		"@opentelemetry/semantic-conventions": "^1.24.1",
-		"@rrweb/rrweb-plugin-sequential-id-record": "workspace:*",
+		"@rrweb/rrweb-plugin-sequential-id-record": "^2.0.0-alpha.17",
 		"error-stack-parser": "2.0.6",
 		"fflate": "^0.8.1",
 		"graphql": "^16.8.1",
@@ -99,7 +99,8 @@
 		"graphql-tag": "^2.12.6",
 		"js-cookie": "^3.0.5",
 		"json-stringify-safe": "^5.0.1",
-		"rrweb": "workspace:*",
+		"rrweb": "^2.0.0-alpha.17",
+		"rrweb-snapshot": "^2.0.0-alpha.17",
 		"stacktrace-js": "2.0.2",
 		"web-vitals": "^3.5.0"
 	},
