--- a/sdk/highlight-run/tsconfig.json
+++ b/sdk/highlight-run/tsconfig.json
@@ -21,6 +21,5 @@
 	},
 	"include": ["src"],
 	"exclude": ["**/src/**/*.test.tsx"],
-	"files": ["package.json"],
-	"references": [{ "path": "../../rrweb/packages/rrweb" }]
+	"files": ["package.json"]
 }
