--- a/turbo.json
+++ b/turbo.json
@@ -2,16 +2,7 @@
 	"$schema": "https://turborepo.org/schema.json",
 	"tasks": {
 		"highlight.run#typegen": {
-			"dependsOn": [
-				"rrweb#build",
-				"@rrweb/rrweb-plugin-sequential-id-record#build",
-				"@rrweb/types#build"
-			],
-			"inputs": [
-				"src/**/*.tsx",
-				"src/**/*.ts",
-				"tsconfig.json"
-			],
+			"inputs": ["src/**/*.tsx", "src/**/*.ts", "tsconfig.json"],
 			"outputs": ["dist/**/*.d.ts"]
 		},
 		"highlight.io#build": {
